# py-testing-example

./: main.py  pyproject.toml
be/: main.py  test_main.py
fe/: app.py  test_app.py
fe/templates/: base.html  index.html  result.html
